--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,18 @@
  */
 
 @import "bootstrap";
+
+
+.main-header {
+  line-height: 1;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.main-header-logo {
+  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+  font-size: 2.25rem;
+}
+
+.main-header-logo:hover {
+  text-decoration: none;
+}
