--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="blog-header py-3">
+<header class="main-header py-3">
 
   <div class="row flex-nowrap justify-content-between align-items-center">
 
@@ -7,7 +7,7 @@
     </div>
 
     <div class="col-4 text-center">
-      <a class="blog-header-logo text-dark" href="#">Large</a>
+      <a class="main-header-logo text-dark" href="#">Large</a>
     </div>
 
     <div class="col-4 d-flex justify-content-end align-items-center">
