--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,15 @@
 
   <body>
 
-    <div class="container">
+<div class="bg-dark">
 
       <%= render 'shared/header' %>
+</div>
+      <%= render 'shared/navigation' %>
 
       <%= yield %>
 
-    </div>
+
 
   </body>
 </html>
