--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,21 +1,14 @@
-<header class="main-header py-3">
+<div class="container">
 
-  <div class="row flex-nowrap justify-content-between align-items-center">
+  <header class="main-header py-3">
 
-    <div class="col-4 pt-1">
-      <a class="text-muted" href="#">Subscribe</a>
+    <div class="row flex-nowrap justify-content-between align-items-center">
+
+      <div class="navbar-brand mx-auto" href="#" style="width:25vh;" >
+        <%=link_to (image_tag 'logoTop.png', style:"width:100%;"), root_path %>
+      </div>
+
     </div>
+  </header>
 
-    <div class="col-4 text-center">
-      <a class="main-header-logo text-dark" href="#">Large</a>
-    </div>
-
-    <div class="col-4 d-flex justify-content-end align-items-center">
-      <a class="text-muted" href="#">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mx-3"><circle cx="10.5" cy="10.5" r="7.5"></circle><line x1="21" y1="21" x2="15.8" y2="15.8"></line></svg>
-      </a>
-            
-      <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
-    </div>
-  </div>
-</header>
+</div>
