Create footer section, stylish css for navigation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,17 @@
 
   <body>
 
-<div class="bg-dark">
+    <div class="bg-dark">
 
       <%= render 'shared/header' %>
-</div>
+
+    </div>
+
       <%= render 'shared/navigation' %>
 
       <%= yield %>
 
-
+      <%= render 'shared/footer' %>
 
   </body>
 </html>
