--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -12,16 +12,28 @@
             <%= link_to 'O nas', root_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Oferta', root_path, class: 'nav-link pl-5' %>
+            <%= link_to 'Usługi', root_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Referencje', root_path, class: 'nav-link pl-5' %>
+            <%= link_to 'Realizacje', root_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Galeria', root_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
+            <%= link_to 'Referencje', root_path, class: 'nav-link pl-5' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Certyfikaty', root_path, class: 'nav-link pl-5' %>
+          </li>
+          <li class="nav-item">
             <%= link_to 'Kontakt', root_path, class: 'nav-link pl-5' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Partnerzy', root_path, class: 'nav-link pl-5' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Promocje', root_path, class: 'nav-link pl-5' %>
           </li>
 
 
