--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,9 +16,17 @@
 
 @import "bootstrap";
 @import "navigation";
+@import "footer";
+
+
+html {height: 100%;}
 
 body {
-	background-color: #ebedee;
+    width: 100%;
+    min-height: 100%; 
+    position: relative; 
+    padding-bottom: [footer-height];
+	background-color: #ebedee;	
 }
 
 
