--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -4,8 +4,8 @@
   padding-top: 1%;
   bottom: 0;
   width: 100%;
-  height: 10vh;
-  line-height: 8vh; 
+  height: 80px;
+  line-height: 60px; 
   background-color: #303030;
   text-align: center;
 }
