--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -9,7 +9,7 @@
             <%= link_to 'Aktualności', root_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'O nas', root_path, class: 'nav-link pl-5' %>
+            <%= link_to 'O nas', about_index_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Usługi', root_path, class: 'nav-link pl-5' %>
@@ -24,7 +24,7 @@
             <%= link_to 'Referencje', root_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Certyfikaty', root_path, class: 'nav-link pl-5' %>
+            <%= link_to 'Facebook', root_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Kontakt', root_path, class: 'nav-link pl-5' %>
