--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -12,7 +12,7 @@
             <%= link_to 'O nas', about_index_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Usługi', root_path, class: 'nav-link pl-5' %>
+            <%= link_to 'Usługi', services_index_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Realizacje', root_path, class: 'nav-link pl-5' %>
@@ -33,7 +33,7 @@
             <%= link_to 'Partnerzy', root_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Promocje', root_path, class: 'nav-link pl-5' %>
+            <%= link_to 'Zaloguj się', root_path, class: 'nav-link pl-5' %>
           </li>
 
 
