--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,26 @@
 
       <%= render 'shared/navigation' %>
 
+      <% if notice %>
+
+        <div class="notice">
+
+          <%= notice %>
+
+        </div>
+
+      <% end %>
+
+      <% if alert %>
+
+        <div class="alert">
+
+          <%= alert %>
+      
+        </div>
+
+        <% end %>
+
       <%= yield %>
 
       <%= render 'shared/footer' %>
