--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -37,7 +37,7 @@
     </div>
     <div class="col-lg-4">
       <%=link_to (image_tag 'box1.png', class:"img-fluid rounded-circle", style:"display:inline; width:200px; height:200px")%>
-      <p class="pt-5">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+      <p class="pt-5 pb-5">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
     </div>
   </div>
 
