--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,7 +1,7 @@
-<h2>Resend confirmation instructions</h2>
+<<h2>Resend confirmation instructions</h2>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= devise_error_messages! %>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -14,3 +14,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
