--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,37 @@
-<h2>Change your password</h2>
+<div class="container pt-5 text-center">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= devise_error_messages! %>
+        <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
+          <h2 class="form-signin-heading text-center">Zmień hasło</h2>
+          
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+          <div class="field">
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
+              <%= f.label :password, "Nowe hasło" %><br />
+              <% if @minimum_password_length %>
+                <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+              <% end %>
 
-<%= render "devise/shared/links" %>
+              <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control"  %>
+          </div>
+
+          <div class="field">
+
+              <%= f.label :password_confirmation, "Potwierdź nowe hasło" %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control"  %>
+
+          </div>
+
+          <div class="row correct text-center pb-3">
+    
+              <%= f.submit "Zmień", style:"background-color: #0f5b94;" %>
+
+          </div>
+
+        <% end %>
+
+        <%= render "devise/shared/links" %>
+  
+</div>
