--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,31 @@
-<h2>Forgot your password?</h2>
+<div class="container pt-5 text-center">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+	  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+        	<h2 class="form-signin-heading text-center">Zapomniałeś hasła?</h2>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+			  <div class="pb-3">
 
-<%= render "devise/shared/links" %>
+			    <%= f.label :email %><br />
+			    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+
+			  </div>
+
+          	  <div class="row correct text-center pb-3">
+    
+                <%= f.submit "Odzyskaj hasło", style:"background-color: #0f5b94;" %>
+
+              </div>
+
+			<% end %>
+
+			<div class="pb-3">
+
+				<%= render "devise/shared/links" %>
+
+			</div>
+
+	    </div>
+	  <div class="col"> </div>
+</div>
