Install Simple Form

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -6,7 +6,7 @@
       <div class="collapse navbar-collapse" id="navbarsExample01">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active pl-5">
-            <%= link_to 'Aktualności', root_path, class: 'nav-link pl-5' %>
+            <%= link_to 'Aktualności', posts_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
             <%= link_to 'O nas', about_index_path, class: 'nav-link pl-5' %>
