Create all views and controller for Posts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 
       <% if notice %>
 
-        <div class="notice">
+        <div class="notice text-center pt-5 font-weight-bold">
 
           <%= notice %>
 
@@ -33,7 +33,7 @@
 
       <% if alert %>
 
-        <div class="alert">
+        <div class="alert text-center pt-5 font-weight-bold">
 
           <%= alert %>
       
