--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<section class="container pt-5 pb-5">
+
+	   <div class="pb-5">
+		 <%= render 'form', post: @post %>
+	   </div>
+
+</section>
