Create Jobs - controller, views, model, validations, assosiations, routes

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -18,7 +18,7 @@
             <%= link_to 'Realizacje', root_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Galeria', root_path, class: 'nav-link pl-5' %>
+            <%= link_to 'Praca', jobs_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Referencje', root_path, class: 'nav-link pl-5' %>
