--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,9 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ 
  *= require_tree .
+ *= require trix
  *= require_self
  */
 
@@ -48,6 +50,11 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+}
+
+
+.trix-toolbar .trix-button--icon {
+	width: 1rem;
 }
 
 @media only screen and (max-width: 1199px),
