--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,7 +3,7 @@
 	<%= simple_form_for @post do |f| %>
 
 	    <%= f.input :title, label: 'Podaj tytuł:' %>
-	    <%= f.input :description, label: 'Podaj treść:'%> 
+	    <%= f.input :description, label: 'Podaj treść:', as: :trix_editor%> 
 	    <%= f.hidden_field :user_id, value: 1 %>
 	    <%= link_to 'Powrót', posts_path, class: 'btn btn-info btn-lg' %><hr>
 	   <div class="pb-5"> 
