--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -27,7 +27,7 @@
             <%= link_to 'Facebook', root_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Kontakt', root_path, class: 'nav-link pl-5' %>
+            <%= link_to 'Kontakt', new_message_path, class: 'nav-link pl-5' %>
           </li>
 
 
