--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container pt-2 pb-5 text-center">
+<div class="container pt-5 pb-5 text-center">
   <%= form_for(@message) do |f| %>
 
     <div class="row">
@@ -33,4 +33,14 @@
     <div class="pt-3 pb-5 captcha">
 			<%= recaptcha_tags %>
 	</div>
+
 </div>
+
+<section class="pb-5">
+
+          <div class="embed-responsive embed-responsive-4by3 pb-5">
+            <iframe class="embed-responsive-item pb-5" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40928.53557519259!2d18.495128924742005!3d50.123095588227365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471148d6419d8e49%3A0xc26d40f9f9b53851!2sRybnik!5e0!3m2!1spl!2spl!4v1564506408297!5m2!1spl!2spl" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+
+</section>
+
