--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -15,7 +15,7 @@
             <%= link_to 'Usługi', services_index_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Realizacje', root_path, class: 'nav-link pl-5' %>
+            <%= link_to 'Realizacje', executions_path, class: 'nav-link pl-5' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Praca', jobs_path, class: 'nav-link pl-5' %>
