--- a/app/views/executions/index.html.erb
+++ b/app/views/executions/index.html.erb
@@ -1,2 +1,40 @@
-<h1>Executions#index</h1>
-<p>Find me in app/views/executions/index.html.erb</p>
+<section class="container pt-5 pb-5">
+  <div class="row">
+      <div class="col-12">
+
+            <% if current_user && current_user&.admin? %>
+
+            <%= link_to 'Dodaj', new_execution_path, class: "btn btn-primary btn-lg" %> <hr/>
+
+            <% end %>
+
+          <div class="row pb-5">
+              <% @executions.each do |execution| %>
+                <div class="col-12">
+                  <div class="card"> 
+                          <div class="card-block text-center">
+                               <h4 class="card-title text-center text-capitalize font-weight-bold">
+                                  <%=execution.name %>
+                               </h4>
+                               <h4 class="card-title text-justify text-capitalize mx-2">
+                                  <%=execution.description %>
+                               </h4>                              
+
+                                <% if current_user && current_user&.admin? %>
+
+                                  <div class="p-2">
+                                    <%= link_to 'Pokaż', execution_path(execution), class: "btn btn-lg btn-primary" %>
+                                    <%= link_to 'Edytuj', edit_execution_path(execution), class: "btn btn-lg btn-info" %>
+                                    <%= link_to 'Usuń', execution_path(execution), method: :delete, data: {confirm: 'Czy na pewno usunąć?'}, class: "btn btn-lg btn-danger" %>
+                                  </div>
+                                <% end %>
+
+                          </div>
+                  </div>
+                </div>
+              <% end %>
+          </div>
+
+      </div>
+  </div>
+</section>
