--- a/app/views/executions/new.html.erb
+++ b/app/views/executions/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Executions#new</h1>
-<p>Find me in app/views/executions/new.html.erb</p>
+<section class="container pt-5 pb-5">
+
+	   <div class="pb-5">
+		 <%= render 'form', execution: @execution %>
+	   </div>
+
+</section>
