--- a/app/views/executions/show.html.erb
+++ b/app/views/executions/show.html.erb
@@ -1,2 +1,26 @@
-<h1>Executions#show</h1>
-<p>Find me in app/views/executions/show.html.erb</p>
+<section class="container pt-5 pb-5">
+  <div class="row">
+      <div class="col-12">
+
+  <p class="text-center">
+    <%= @execution.name %>
+  </p>
+
+  <p class="text-justify">
+    <%= @execution.description %>
+  </p>
+
+  </div>
+      </div>
+
+  <div class="pb-5">
+      <%= link_to 'Powrót', executions_path, class: 'btn btn-lg btn-success' %>
+
+    <% if current_user && current_user&.admin? %>
+
+      <%= link_to 'Edytuj', edit_execution_path(@execution), class: 'btn btn-lg btn-primary' %> 
+
+    <% end %>
+  </div>
+
+</section>
