--- a/app/assets/stylesheets/executions.scss
+++ b/app/assets/stylesheets/executions.scss
@@ -1,3 +1,69 @@
 // Place all the styles related to the Executions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+img {
+	transition: all 2s ease-in-out;
+	margin-left: 10vh;
+}
+
+img:hover {
+	transform: scale(1.4);
+}
+
+@media only screen and (max-width: 1199px),
+(min-device-width: 1025px) and (max-device-width: 1199px) {
+
+   img {
+	 transition: all 2s ease-in-out;
+	 margin-left: 4vh;
+	}
+}
+
+@media only screen and (max-width: 1024px),
+(min-device-width: 992px) and (max-device-width: 1024px) {
+
+   img {
+	 transition: all 2s ease-in-out;
+	 margin-left: 2vh;
+	 width: 60vh;
+	}
+}
+
+@media only screen and (max-width: 991px),
+(min-device-width: 801px) and (max-device-width: 991px) {
+
+   img {
+	 transition: all 2s ease-in-out;
+	 margin-left: 25vh;
+	}
+}
+
+@media only screen and (max-width: 800px),
+(min-device-width: 768px) and (max-device-width: 800px) {
+
+   img {
+	 transition: all 2s ease-in-out;
+	 margin-left: 5vh;
+	}
+}
+
+@media only screen and (max-width: 767px),
+(min-device-width: 640px) and (max-device-width: 767px) {
+
+   img {
+	 transition: all 2s ease-in-out;
+	 margin-left: 10vh;
+	}
+}
+
+@media only screen and (max-width: 639px),
+(min-device-width: 100px) and (max-device-width: 639px) {
+	
+	img {
+	  transition: all 2s ease-in-out;
+	  margin-left: 3vh;
+	  width: 50vh;
+	}
+}
