Install will paginate

--- a/app/views/opinions/edit.html.erb
+++ b/app/views/opinions/edit.html.erb
@@ -11,7 +11,7 @@
 
 		<div class="pb-5"> 
 		   		
-		  <%= f.submit "Zapisz", class: 'btn btn-success', style: "float:left" %>
+		  <%= f.submit "Zapisz", class: 'btn btn-success btn-lg', style: "float:left" %>
 		   
 		</div>
 
