--- a/app/views/executions/index.html.erb
+++ b/app/views/executions/index.html.erb
@@ -1,5 +1,12 @@
 <section class="container pt-5 pb-5">
   <div class="row">
+
+    <div class="p-2">
+
+      <%= will_paginate @executions, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
+
+    </div>
+    
       <div class="col-12">
 
             <% if current_user && current_user&.admin? %>
