--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -10,7 +10,7 @@
 	    <%= f.hidden_field :user_id, value: 1 %>
 	    <%= link_to 'Powrót', jobs_path, class: 'btn btn-info btn-lg' %><hr>
 	   <div class="pb-5"> 
-	   		<%= f.submit "Zapisz", class: 'btn btn-success', style: "float:left" %>
+	   		<%= f.submit "Zapisz", class: 'btn btn-success btn-lg', style: "float:left" %>
 	   </div>
 
 	<% end %>
