--- a/app/views/opinions/_form.html.erb
+++ b/app/views/opinions/_form.html.erb
@@ -8,7 +8,7 @@
 	    <%= f.input :description, label: 'Podaj treść:', as: :trix_editor%> 
 	    <%= link_to 'Powrót', opinions_path, class: 'btn btn-info btn-lg' %><hr>
 	   <div class="pb-5"> 
-	   		<%= f.submit "Zapisz", class: 'btn btn-success', style: "float:left" %>
+	   		<%= f.submit "Zapisz", class: 'btn btn-success btn-lg', style: "float:left" %>
 	   </div>
 
 	<% end %>
