--- a/app/views/opinions/accept_index.html.erb
+++ b/app/views/opinions/accept_index.html.erb
@@ -1,47 +1,56 @@
-<div class="row">
-      <div class="col-12">
+<section class="container pt-5 pb-5">
+  <div class="row">
 
-          <div class="row pb-5">
-              <% @opinions.each do |opinion| %>
-                <div class="col-12">
-                  <div class="card"> 
-                          <div class="card-block text-center pt-3 pb-3">
-                               <h4 class="card-title text-center font-weight-bold">
-                                  <%=opinion.name %>
-                               </h4>
-                               <h4 class="card-body text-justify mx-2">
-                                  <%=sanitize opinion.description %>
-                               </h4>      
+    <div class="p-2">
 
-                              <% if opinion.accept == true %>
+      <%= will_paginate @opinions, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
 
-                                <h6 class="card-footer text-justify mx-2">  
-                                  <%= "Zatwierdzony" %>
-                                </h6>
+    </div>    
+    
+        <div class="col-12">
 
-                              <% else %>
+            <div class="row pb-5">
+                <% @opinions.each do |opinion| %>
+                  <div class="col-12">
+                    <div class="card"> 
+                            <div class="card-block text-center pt-3 pb-3">
+                                 <h4 class="card-title text-center font-weight-bold">
+                                    <%=opinion.name %>
+                                 </h4>
+                                 <h4 class="card-body text-justify mx-2">
+                                    <%=sanitize opinion.description %>
+                                 </h4>      
 
-                                <h6 class="card-footer text-justify mx-2">  
-                                  <%= "Niezatwierdzony" %>
-                                </h6>
+                                <% if opinion.accept == true %>
 
-                              <% end %>
+                                  <h6 class="card-footer text-justify mx-2">  
+                                    <%= "Zatwierdzony" %>
+                                  </h6>
 
-                                <% if current_user && current_user&.admin? %>
+                                <% else %>
 
-                                  <div class="p-2">
-                                    <%= link_to 'Pokaż', opinion_path(opinion), class: "btn btn-lg btn-primary" %>
-                                    <%= link_to 'Edytuj', edit_admin_opinion_path(opinion), class: "btn btn-lg btn-info" %>
-                                    <%= link_to 'Usuń', opinion_path(opinion), method: :delete, data: {confirm: 'Czy na pewno usunąć?'}, class: "btn btn-lg btn-danger" %>
-                                  </div>
+                                  <h6 class="card-footer text-justify mx-2">  
+                                    <%= "Niezatwierdzony" %>
+                                  </h6>
+
                                 <% end %>
 
-                          </div>
-                  </div>
-                </div>
-              <% end %>
-          </div>
+                                  <% if current_user && current_user&.admin? %>
 
-      </div>
-  </div>
+                                    <div class="p-2">
+
+                                      <%= link_to 'Edytuj', edit_admin_opinion_path(opinion), class: "btn btn-lg btn-info" %>
+                                      <%= link_to 'Usuń', opinion_path(opinion), method: :delete, data: {confirm: 'Czy na pewno usunąć?'}, class: "btn btn-lg btn-danger" %>
+
+                                    </div>
+                                  <% end %>
+
+                            </div>
+                    </div>
+                  </div>
+                <% end %>
+            </div>
+
+        </div>
+    </div>
 </section>
