--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,6 +10,13 @@
 
 <section class="container pb-5">
   <div class="row">
+
+    <div class="p-2">
+
+      <%= will_paginate @posts, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
+
+    </div>
+
       <div class="col-12">
 
             <% if current_user && current_user&.admin? %>
